--- a/primeiro-periodo-2024.2/tecnologia-frontEnd/index.html
+++ b/primeiro-periodo-2024.2/tecnologia-frontEnd/index.html
@@ -4,29 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            background-color: black;
-            font-size: 19px;
-        }
-
-        table {
-            border: 3px solid;
-            color: grey;
-        }
-
-        tr,
-        th {
-            border: 1px solid;
-            color: white;
-        }
-
-        #formu {
-            color: white;
-            
-        }
-
-    </style>
+    <link rel="stylesheet" href="style.css">
     <title>Aula de Formulario</title>
 </head>
 
